deploy/kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: infervoyage-dev
  labels:
    app: api
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: api
  type: ClusterIP
